<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.rogers.rmcdouga</groupId>
	<artifactId>fitg</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Freedom In The Galaxy Game</name>
	<description>Freedom In The Galaxy implementation (old SPI board game)</description>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<junit.version>5.10.1</junit.version>
		<hamcrest.version>2.2</hamcrest.version>
		<commonmark.version>0.21.0</commonmark.version>
		<commons.collections4.version>4.4</commons.collections4.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>${hamcrest.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.commonmark</groupId>
				<artifactId>commonmark</artifactId>
				<version>${commonmark.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons.collections4.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<modules>
		<module>fitg.basegame</module>
		<module>svg-viewer</module>
		<module>fitg-spring-boot-autoconfigure</module>
		<module>fitg-spring-boot-starter</module>
		<module>fitg.cli</module>
		<module>fitg.renderer</module>
	</modules>
</project>